methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:18: error: not found: value c
    c=getCouleurSol();
    ^SlugSnail:23: error: not found: value c
    if(getCouleurSol()==c){
                        ^