methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
  while(!isOverBaggle()){
    if(isFacingTrail==true){
      brushDown();
      brushUp();
      forward();
    }else{
      left();
    }
    }
  brushDown();
  brushUp();
  pickupBaggle();
}

def isFacingTrail():Boolean ={
  	c=getCouleurSol();
    if(isFacingWall()){
      return false
    }else{
      forward();
    if(getCouleurSol()==c){
      backward();
      return true
    }else{
      backward();
      return false
    }
    }
}